# IniEditor

./: APIHandler.cpp  APIHandler.h  CMakeLists.txt  PMCM.cpp  PMCM.h  PrismaConfig.cpp  PrismaConfig.h  plugin.cpp  vcpkg.json
.github/workflows/: build.yml  build.yml.backup
Data/PrismaUI/PMCM/: EnxyAbilities.txt
Data/PrismaUI/Views/EnxyAbilities/: settings.css  settings.html  settings.js
include/: IniEditorUI.h  Plugin.h  UI.h
src/: IniEditor.cpp  IniEditor.h  IniEditorUI.cpp
